--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@ai-sdk/anthropic": "^3.0.35",
     "@ai-sdk/google": "^3.0.20",
     "@ai-sdk/openai": "^3.0.25",
+    "@playwright/test": "^1.58.1",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.93.3",
     "ai": "^6.0.67",
     "inngest": "^3.50.0",
     "next": "16.1.6",
+    "posthog-js": "^1.336.4",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
