--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "16.1.6",
     "posthog-js": "^1.336.4",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "resend": "^6.9.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
