--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^2.93.3",
     "ai": "^6.0.67",
     "inngest": "^3.50.0",
+    "jose": "^6.1.3",
     "next": "16.1.6",
     "posthog-js": "^1.336.4",
     "react": "19.2.3",
