Update .gitignore for test artifacts and dev scripts

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,10 @@ npm-debug.log*
 # temp
 /tmp
 /tmp/*   
+# Test artifacts
+playwright-report/
+test-results/
+_screenshot.cjs
+
+# Dev scripts
+scripts/
