--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "posthog-js": "^1.336.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "resend": "^6.9.1"
+    "resend": "^6.9.1",
+    "swr": "^2.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
