--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jose": "^6.1.3",
     "next": "16.1.6",
     "posthog-js": "^1.336.4",
+    "posthog-node": "^5.24.15",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "resend": "^6.9.1",
