--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/cron/daily-scans",
       "schedule": "15 9 * * *"
+    },
+    {
+      "path": "/api/cron/checkpoints",
+      "schedule": "45 10 * * *"
     }
   ]
 }
