--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     {
       "path": "/api/cron/checkpoints",
       "schedule": "45 10 * * *"
+    },
+    {
+      "path": "/api/cron/daily-scans",
+      "schedule": "0 12 * * *"
     }
   ]
 }
