Fix LLM JSON parsing failures (Sentry NEXTJS-7 + NEXTJS-J)
closeJson used counters instead of a stack, closing brackets/braces in
wrong order for nested structures. extractJson Tier 1 (code block)
returned content without validation, bypassing repair tiers. Add
jsonrepair as Tier 4 last-resort for mid-stream malformation (unescaped
quotes, missing commas). Add Sentry breadcrumbs to trace which tier fires.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ai": "^6.0.67",
     "inngest": "^3.50.0",
     "jose": "^6.1.3",
+    "jsonrepair": "^3.13.2",
     "next": "16.1.6",
     "posthog-js": "^1.336.4",
     "posthog-node": "^5.24.15",
